[package]
name = "rust_emb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ARM dependencies
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"

# Real-time depen1.1.2es
cortex-m-rtic = "1.1.2"
rtic-monotonic = "1.0.0"
fugit = "0.3.5"

# Device dependencies
nrf52833-hal = {version = "0.15.1", features = ["rt"]}	
embedded-hal = "0.2.7"
microbit-v2 = "0.13.0"

# Debug dependencies
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = {version = "0.3.0", features = ["print-defmt"]}

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
opt-level = 3 # <-
overflow-checks = false # <-